[gd_scene load_steps=2 format=3 uid="uid://cixcpnexd1gj6"]

[ext_resource type="Script" uid="uid://c1fo5amunywqw" path="res://src/main.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.176471, 0.188235, 1)
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.5
offset_top = -23.0
offset_right = 58.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="ToolBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="OpenButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Open an Image"

[node name="PrevButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Previous Image"

[node name="NextButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Next Image"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ToolBar"]
layout_mode = 2

[node name="ZoomOutButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Zoom Out"

[node name="ZoomInButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Zoom In"

[node name="ZoomFitButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Zoom Fit"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ToolBar"]
layout_mode = 2

[node name="RotateLeftButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Rotate Left"

[node name="RotateRightButton" type="Button" parent="VBoxContainer/ToolBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Rotate Right"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp", "*.bmp", "*.tga")
